View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0029658 | Open CASCADE | OCCT:Samples | public | 2018-03-28 17:09 | 2018-06-29 21:19 |
Reporter | bugmaster | Assigned To | bugmaster | ||
Priority | normal | Severity | major | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2010 | ||
Product Version | 7.3.0 | ||||
Target Version | 7.3.0 | Fixed in Version | 7.3.0 | ||
Summary | 0029658: Samples - light is not updated while moving mouse within Viewer3d MFC sample | ||||
Description | Light definition is not updated during mouse movements, if detected entity is not changed after 0029285. Problem is not reproduced on OCCT 7.2.0 Problem is reproduced on IR-2017-11-24 Problem is reproduced on IR-WEEK12 Cone of spot light work extremely slowly. The another option of light works bad and slowly. | ||||
Steps To Reproduce | - Start Viewer3d sample. - Add some object (e.g. textured bottle) - Add Ambient light source Bug: viewer is not updated until click in viewer / detecting new object. - Add Positional/Spot/Directional light source Bug: viewer is not updated during mouse movement. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Light.png (38,072 bytes) |
|
Branch CR29658 has been created by kgv. SHA-1: cc565c496113e3249287f7c1fa7f29b534140464 Detailed log of new commits: Author: kgv Date: Sun Apr 8 12:43:24 2018 +0300 0029658: Samples - light is not updated while moving mouse within Viewer3d MFC sample Adding missing Viewer redraw calls. |
|
Please take/check trivial patch (sample only). |
|
Checked on IR-WEEK12 |
|
Branch CR29658 has been deleted by kgv. SHA-1: cc565c496113e3249287f7c1fa7f29b534140464 |
Date Modified | Username | Field | Change |
---|---|---|---|
2018-03-28 17:09 | bugmaster | New Issue | |
2018-03-28 17:09 | bugmaster | Assigned To | => kgv |
2018-03-28 17:10 | bugmaster | Summary | Light does not work in Viewer3d => Light does not work in Viewer3d mfc sample |
2018-03-28 17:10 | bugmaster | Status | new => assigned |
2018-03-28 17:10 | bugmaster | Target Version | 7.4.0 => 7.3.0 |
2018-03-28 17:11 | bugmaster | Description Updated | |
2018-03-28 17:12 | bugmaster | File Added: Light.png | |
2018-03-28 17:12 | bugmaster | File Deleted: Light.png | |
2018-03-28 17:14 | bugmaster | File Added: Light.png | |
2018-03-28 17:41 | bugmaster | Description Updated | |
2018-04-08 12:11 | kgv | Summary | Light does not work in Viewer3d mfc sample => Samples - Light does not work in Viewer3d MFC sample |
2018-04-08 12:41 | kgv | Summary | Samples - Light does not work in Viewer3d MFC sample => Samples - light is not updated while moving mouse within Viewer3d MFC sample |
2018-04-08 12:41 | kgv | Description Updated | |
2018-04-08 12:41 | kgv | Steps to Reproduce Updated | |
2018-04-08 12:42 | kgv | Relationship added | child of 0029285 |
2018-04-08 12:42 | kgv | Product Version | 7.2.0 => 7.3.0 |
2018-04-08 12:43 | kgv | Description Updated | |
2018-04-08 12:43 | git | Note Added: 0075224 | |
2018-04-08 12:43 | kgv | Note Added: 0075225 | |
2018-04-08 12:43 | kgv | Assigned To | kgv => bugmaster |
2018-04-08 12:43 | kgv | Status | assigned => resolved |
2018-04-08 12:44 | kgv | Status | resolved => reviewed |
2018-04-08 12:44 | kgv | Note Edited: 0075225 | |
2018-04-09 12:13 | bugmaster | Note Added: 0075243 | |
2018-04-09 12:13 | bugmaster | Status | reviewed => tested |
2018-04-11 07:49 | bugmaster | Changeset attached | => occt master 55791647 |
2018-04-11 07:49 | bugmaster | Status | tested => verified |
2018-04-11 07:49 | bugmaster | Resolution | open => fixed |
2018-04-11 11:00 | git | Note Added: 0075341 | |
2018-04-11 12:06 | bugmaster | Test case number | => Not needed |
2018-06-29 21:13 |
|
Fixed in Version | => 7.3.0 |
2018-06-29 21:19 |
|
Status | verified => closed |