0029658: Samples - light is not updated while moving mouse within Viewer3d MFC sample

Adding missing Viewer redraw calls.